--- a/config/locales/models/user/en.yml
+++ b/config/locales/models/user/en.yml
@@ -1,1 +1,8 @@
 en:
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            password:
+              too_short: "it's too short, must be at least 12 characters long"
